# household-inventory

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  inventory.sh  pyproject.toml
.claude/skills/: inventory
.claude/skills/semantic-search/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci-cd.yml
app/: cli.py  db.py  embeddings.py  exporters.py  main.py  mutations.py  queries.py  schema.sql  settings.py
app/static/: app.css
app/templates/: admin.html  base.html  history.html  import_export.html  inventory.html
app/templates/partials/: admin_edit_row.html  admin_row.html  inventory_body.html  item_card.html  item_list.html
deploy/: README.md  com.vy.inventory-backup.plist  com.vy.inventory-deploy.plist  com.vy.inventory.plist
scripts/: backup_db.py  deploy_main.py  deploy_watch.py  export_csv.py  import_from_notion.py  init_db.py  install_launchd.sh  uninstall_launchd.sh
skills/inventory/: SKILL.md  reference.md
tests/: conftest.py  test_cli.py  test_db.py  test_deploy_main.py  test_deploy_watch.py  test_embeddings.py  test_exporters.py  test_low_stock_logic.py  test_mutations.py  test_queries.py  test_routes.py
